# StableDiffusionUI

./: .gitignore  models.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  inference.rs  mod.rs  model.rs
src/css/: main.css
src/js/: arch.js  config.js  console.js  inference.js  main.js  model-scan.js  notifications.js  presets.js  preview.js  prompt-enhancer.js  prompt-templates.js  tooltips.js
